horizontal scrolling issue in mobile device is fixed from stack overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 body {
   font-family: "Poppins", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
+  background-color: red;
 }
 
 .bg-dark-blue {
@@ -21,4 +22,13 @@ body {
 
 .filtered {
   filter: grayscale(100%);
+}
+@media screen and (max-width: 667px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
 }
